refactor(recommendation): 重构推荐服务代码结构和优化实现
- 调整导入语句顺序，统一依赖项位置
- 为常量添加完整的JavaDoc注释文档
- 添加std()方法用于计算数组标准差
- 更新代码注释，移除多余空行和标记
- 使用List.of()和List.getLast()等现代Java API
- 优化字符串拼接和对象创建方式
- 移除不必要的@SuppressWarning注解
- 调整内部类定义位置，改善代码组织结构
- 修复数值计算中的潜在精度问题
- 标准化日志输出格式和内容
- 优化条件判断和变量初始化逻辑